# huira

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: copilot-instructions.md
apps/huira/: CMakeLists.txt  cli.cpp  cli.hpp  main.cpp  progress_bar.hpp
apps/huira/commands/: fetch_tycho2.cpp  process_tycho2.cpp  tycho2.hpp
apps/huira_cli/: CMakeLists.txt  cli.cpp  cli.hpp  compact_output.hpp  main.cpp  progress_bar.hpp
apps/huira_cli/commands/: fetch_tycho2.cpp  import_tycho2.cpp  process_dems.cpp  process_tycho2.cpp  tycho2.hpp
bindings/python/: CMakeLists.txt  README.md  __init__.py  _version.py.in  huira_module.cpp  pyproject.toml  pyproject.toml.in
bindings/python/huira/: __init__.py  cli.py  rgb.py  swir8.py  units.py  visible8.py
bindings/python/huira/units/: units_py.ipp
bindings/python/include/huira/cameras/: distortion_coeffs_py.ipp
bindings/python/include/huira/core/: interval_py.ipp  rotation_py.ipp  spectral_bin_py.ipp  spectral_bins_py.ipp  time_py.ipp  types_py.ipp
bindings/python/include/huira/ephemeris/: spice_py.ipp
bindings/python/include/huira/handles/: camera_handle_py.ipp  frame_handle_py.ipp  handle_py.ipp  instance_handle_py.ipp  light_handle_py.ipp  material_handle_py.ipp  model_handle_py.ipp  node_handle_py.ipp  root_frame_handle_py.ipp  texture_handle_py.ipp  unresolved_handle_py.ipp
bindings/python/include/huira/images/: fits_metadata_py.ipp  image_py.ipp
bindings/python/include/huira/materials/: bsdfs_py.ipp
bindings/python/include/huira/render/: frame_buffer_py.ipp  interaction_py.ipp  raster_renderer_py.ipp  ray_py.ipp  renderer_py.ipp
bindings/python/pyhuira/units/: units_py.ipp
bindings/python/src/: huira_module.cpp
docs/: .gitignore  CMakeLists.txt  Doxyfile.in  conf.py  conf.py.in  docs-dependencies.yml  huira_spectral_ext.py  index.rst
docs/_static/css/: custom.css
docs/_static/js/: logo_link.js
docs/_templates/sidebar/: website_link.html
docs/api/: index.rst
docs/api/cpp/: index.rst
docs/api/cpp/core/: index.rst  ray.rst  ray_hit.rst  rotation.rst  spectral_bins.rst  spice.rst  time.rst  transform.rst
docs/api/cpp/handles/: index.rst  point_light_handle.rst  root_frame_handle.rst  unresolved_handle.rst
docs/api/cpp/images/: image.rst
docs/api/cpp/render/: index.rst
docs/api/python/: index.rst
docs/api_reference/cpp_api/: index.rst
docs/api_reference/cpp_api/assets/: index.rst  mesh.rst  model.rst  unresolved_object.rst
docs/api_reference/cpp_api/cameras/: camera_model.rst  index.rst
docs/api_reference/cpp_api/core/: constants.rst  index.rst  interval.rst  physics.rst  transform.rst  types.rst
docs/api_reference/cpp_api/ephemeris/: index.rst  spice.rst
docs/api_reference/cpp_api/handles/: camera_handle.rst  frame_handle.rst  handle.rst  index.rst  instance_handle.rst  light_handle.rst  mesh_handle.rst  model_handle.rst  node_handle.rst  point_light_handle.rst  root_frame_handle.rst
docs/api_reference/cpp_api/images/: index.rst
docs/api_reference/cpp_api/render/: frame_buffer.rst  index.rst  raster_renderer.rst  ray.rst  renderer.rst  sampler.rst
docs/api_reference/cpp_api/scene/: frame_node.rst  index.rst  instance.rst  node.rst  scene_view.rst
docs/api_reference/cpp_api/stars/: index.rst  star.rst
docs/api_reference/cpp_api/util/: logger.rst
docs/api_reference/python_api/: index.rst
docs/api_reference/python_api/cameras/: distortion_coeffs.rst  index.rst
docs/api_reference/python_api/core/: index.rst  interval.rst  rotation.rst  spectral_bin.rst  spectral_bins.rst  time.rst  types.rst  units.rst
docs/api_reference/python_api/ephemeris/: index.rst  spice.rst
docs/api_reference/python_api/handles/: camera_handle.rst  frame_handle.rst  index.rst  instance_handle.rst  light_handle.rst  root_frame_handle.rst  unresolved_handle.rst
docs/api_reference/python_api/images/: image.rst  index.rst
docs/api_reference/python_api/render/: frame_buffer.rst  index.rst  raster_renderer.rst  renderer.rst
docs/api_reference/python_api/scene/: scene.rst  scene_view.rst
docs/design_overview/: aberration_frames.rst  index.rst  light_transport.rst
docs/for_contributors/build_instructions/: index.rst  windows.md
docs/for_contributors/implementation_details/: index.rst
docs/for_contributors/implementation_details/assets/: index.rst  unresolved_object.rst
docs/for_contributors/implementation_details/cameras/: camera.rst  index.rst
docs/for_contributors/implementation_details/detail/: concepts.rst  index.rst
docs/for_contributors/implementation_details/objects/: unresolved_object.rst
docs/for_users/api_reference/cpp_api/: index.rst
docs/for_users/api_reference/python_api/: index.rst
docs/getting_started/build_instructions/: index.rst  linux.md  macos.md  options.md  python-bindings.md  visual-studio.md  windows.md
docs/huira/: index.rst
docs/huira/concepts/: index.rst  numeric_concepts.rst
docs/huira/core/: index.rst  rotation.rst  types.rst  units.rst
docs/huira/detail/: index.rst
docs/huira/detail/concepts/: numeric_concepts.rst
docs/huira/handles/: index.rst  unresolved_handle.rst
docs/huira/math/: constants.rst  index.rst  rotation.rst  types.rst
docs/huira/units/: index.rst  units.rst
docs/implementation/: index.rst
docs/implementation/objects/: index.rst
docs/implementation/objects/cameras/: camera.rst  distortion.rst  index.rst
docs/implementation/objects/lights/: light.rst  point_light.rst
docs/physics_and_assumptions/: index.rst  sensor_modeling.rst
source/huira/: CMakeLists.txt
src/huira/: CMakeLists.txt
src/huira/detail/diagnostics/: logging.cpp
src/huira/detail/platform/: info.cpp  paths.cpp
src/huira/math/: rotation.cpp
src/huira/platform/: info.cpp  paths.cpp
src/huira/scene/: scene_node.cpp
tests/packaging/: CMakeLists.txt  main.cpp
tests/unittests/: CMakeLists.txt  explicit_instantiations.cpp
tests/unittests/huira/core/: test_rotation.cpp  test_time.cpp
tests/unittests/huira/math/: test_rotation.cpp
tests/unittests/huira/units/: test_units.cpp
(+570 files in other folders)
