[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "huira"
dynamic = ["version"]
description = "Python bindings for the Huira library"
requires-python = ">=3.9"
# license = "MIT"  # adjust to your license

[tool.scikit-build]
cmake.source-dir = "../.."
cmake.args = ["-DHUIRA_PYTHON=ON"]
cmake.build-type = "Release"
cmake.define = {}

# No Python source packages — everything comes from CMake install() rules
wheel.packages = []

# Editable install support (pip install -e .)
build-dir = "build/{wheel_tag}"
editable.rebuild = true

# Pull version from the root VERSION file
[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "../../VERSION"
regex = "(?P<value>\\d+\\.\\d+\\.\\d+)"

[[tool.scikit-build.overrides]]
if.platform-system = "win32"
cmake.args = ["-DHUIRA_PYTHON=ON", "-A", "x64"]
