[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "huira"
dynamic = ["version"]
description = "Python bindings for the Huira library"
requires-python = ">=3.9"
license = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://huira.space"
Documentation = "https://docs.huira.space"
Source = "https://github.com/huira-render/huira"
Issues = "https://github.com/huira-render/huira/issues"

[tool.scikit-build]
cmake.source-dir = "../.."
cmake.args = ["-DHUIRA_PYTHON=ON", "-DHUIRA_TOOLS=ON", "-DHUIRA_NATIVE_ARCH=OFF"]
cmake.build-type = "Release"
cmake.define = {}

# No Python source packages — everything comes from CMake install() rules
wheel.packages = []

# Editable install support (pip install -e .)
build-dir = "build/{wheel_tag}"
editable.rebuild = true

# Pull version from the root VERSION file
[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "../../VERSION"
regex = "(?P<value>\\d+\\.\\d+\\.\\d+)"

[[tool.scikit-build.overrides]]
if.platform-system = "win32"
cmake.args = ["-DHUIRA_PYTHON=ON", "-DHUIRA_TOOLS=ON", "-DHUIRA_NATIVE_ARCH=OFF", "-A", "x64"]

[project.scripts]
huira = "huira.cli:main"

# ---------------------------------------------------------------------------
# cibuildwheel configuration
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux* *-win32"
build-verbosity = 1

# ---------------------------------------------------------------------------
# Linux: vcpkg (build deps from source inside manylinux container)
# ---------------------------------------------------------------------------
[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
before-all = [
    "dnf install -y git curl zip unzip tar pkgconfig perl-IPC-Cmd cmake ninja-build",
    "git clone https://github.com/microsoft/vcpkg.git /opt/vcpkg",
    "/opt/vcpkg/bootstrap-vcpkg.sh -disableMetrics",
    "echo 'set(VCPKG_BUILD_TYPE release)' >> /opt/vcpkg/triplets/x64-linux.cmake",
    "/opt/vcpkg/vcpkg install --x-manifest-root=/project/packaging --x-install-root=/opt/vcpkg_installed --triplet=x64-linux --x-feature=apps",
]
environment = { CMAKE_TOOLCHAIN_FILE = "/opt/vcpkg/scripts/buildsystems/vcpkg.cmake", VCPKG_INSTALLED_DIR = "/opt/vcpkg_installed", VCPKG_MANIFEST_INSTALL = "OFF" }

# auditwheel: let it auto-detect the appropriate manylinux tag
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

# ---------------------------------------------------------------------------
# macOS: conda (ARM64 only, macOS 11.0+)
# ---------------------------------------------------------------------------
[tool.cibuildwheel.macos]
archs = ["arm64"]
before-all = [
    "curl -fsSL https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-MacOSX-$(uname -m).sh -o /tmp/miniforge.sh",
    "bash /tmp/miniforge.sh -b -p $HOME/conda",
    "rm /tmp/miniforge.sh",
    "$HOME/conda/bin/conda install -y -c conda-forge assimp cfitsio cspice embree3 fftw gdal glm indicators libcurl libtiff libpng libjpeg-turbo tbb-devel",
]
environment = { CONDA_PREFIX = "$HOME/conda", REPAIR_LIBRARY_PATH = "$HOME/conda/lib", MACOSX_DEPLOYMENT_TARGET = "11.0" }
repair-wheel-command = """\
    DYLD_LIBRARY_PATH=$REPAIR_LIBRARY_PATH delocate-wheel \
    --require-archs {delocate_archs} -w {dest_dir} -v {wheel}\
"""

# ---------------------------------------------------------------------------
# Windows: conda
# ---------------------------------------------------------------------------
[tool.cibuildwheel.windows]
before-all = [
    "curl -fsSL https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-Windows-x86_64.exe -o %TEMP%\\miniforge.exe",
    "start /wait \"\" %TEMP%\\miniforge.exe /InstallationType=JustMe /RegisterPython=0 /AddToPath=0 /S /D=C:\\Miniconda",
    "C:\\Miniconda\\condabin\\conda.bat install -y -c conda-forge assimp cfitsio cspice embree3 fftw gdal glm indicators libcurl libtiff libpng libjpeg-turbo tbb-devel",
]
environment = { CONDA_PREFIX = "C:\\Miniconda" }
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair --add-path C:\\Miniconda\\Library\\bin;C:\\Miniconda\\Library\\lib;C:\\Miniconda\\bin -w {dest_dir} {wheel}"
